--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,7 @@
       <version>5.3.19</version>
     </dependency>
 
-
-      <dependency>
+    <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf-spring5</artifactId>
       <version>3.1.2.RELEASE</version>
@@ -79,7 +78,20 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>5.3.13.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>5.3.13.RELEASE</version>
+      </dependency>
+
   </dependencies>
+
   <build>
     <finalName>received-mvc-jdk17</finalName>
       <plugins>
